Removed top margin from info panel to prevent the small jump on page load

--- a/app/static_src/less/goal_detail.less
+++ b/app/static_src/less/goal_detail.less
@@ -282,7 +282,6 @@
   transition: height .3s ease;
   display:block;
   overflow:hidden;
-  margin:1rem 0 0 0;
   opacity:0;
   position:absolute;
   &.mod-height-read{
